# LaserSeteroCalibration

./: .README.md.swp  CameraCameraExtrinsicCalibration.m  CameraLaserExtrinsicCalibration.m  GetCameraNorDis.m  GetCameraPlanes2.m  OrganizeLaserPlanePoints.m  ProjectLaserIntoImage.m  README.md  RmsErrorPointsToPlanes.m  extractCameraNormalDistance.m  extractLaserNormalDistance.m  loadpcdfiles.m  readVelodyne.m
ZED_STEREO_LASER_SWEEP/: Calib_Results_left.m  Calib_Results_left.mat  Calib_Results_right.m  Calib_Results_right.mat  calib_data_left.mat  calib_data_right.mat  plane_01.pcd  plane_02.pcd  plane_03.pcd  plane_04.pcd  plane_05.pcd  plane_06.pcd  plane_07.pcd  plane_08.pcd  plane_09.pcd  plane_10.pcd  plane_11.pcd  plane_12.pcd  plane_13.pcd  plane_14.pcd  plane_15.pcd  plane_16.pcd  plane_17.pcd  plane_18.pcd  plane_19.pcd  plane_20.pcd
data_vel16_zedleft/: Calib_Results.m  Calib_Results.mat  Calib_Results_old0.m  Calib_Results_old0.mat  Calib_Results_old1.m  Calib_Results_old1.mat  calib_data.mat  pc8remain.pcd  velPlane001.pcd  velPlane002.pcd  velPlane003.pcd  velPlane004.pcd  velPlane005.pcd  velPlane006.pcd  velPlane007.pcd  velPlane008.pcd  velPlane009.pcd  velPlane010.pcd  velPlane011.pcd  velPlane012.pcd  velPlane013.pcd  velPlane014.pcd  velPlane015.pcd  velPlane016.pcd  velPlane017.pcd  velPlane018.pcd  velPlane019.pcd  velPlane020.pcd  velPlane021.pcd  velPlane022.pcd  velPlane023.pcd  velPlane024.pcd  velPlane025.pcd  velPlane026.pcd  velPlane027.pcd  velPlane028.pcd  velPlane029.pcd  velPlane030.pcd  (+7 more)
project/: CMakeLists.txt  coloring.cpp
(+23 files in other folders)
